keep header in foreground (z-index fix)

--- a/src/main/resources/static/design/style.css
+++ b/src/main/resources/static/design/style.css
@@ -49,6 +49,7 @@ body {
 header {
     position: sticky;
     top: 0;
+    z-index: 99999;
 }
 
 #content {
